 This file describes changes in the IO package beginning from version 1.2:
===========================================================================

==========================
 Changes from 2.3 -> 2.4:
==========================

  - Added ignoring of SIGPIPE for architectures where standard
    behaviour is to terminate the process.

==========================
 Changes from 2.2 -> 2.3:
==========================

  - Require GAP >= 4.4.9 in PackageInfo.g
  - Change addresses to St Andrews.
  - Add understanding of chunked transfer encoding.
  - Make IO compile on FreeBSD.
  - Added IO_getpid, IO_getppid, IO_kill.
  - Change license to GPL V2 or later.
  - Released revision 328 as 2.3


==========================
 Changes from 2.1 -> 2.2:
==========================

  - Fixed a serious bug with the generic object pickler.
  - Released version 296 as 2.2


==========================
 Changes from 2.0 -> 2.1:
==========================

  - Fixed bug with IO_stat, that time stamps are usually >= 2^28.
  - Add framework for other packages to install picklers and unpicklers
    even if they are loaded before the IO package.
  - Pickling/Unpickling of functions and operations (methods still a problem)
  - Leave out last argument of IO_GenericObjectUnpickler because it
    was never needed, return either IO_Error or unpickled object. This
    changes the semantics!
  - Pickling/Unpickling of WeakPointerObjects
  - Pickling/Unpickling of permutation groups (including Size and base of 
    StabChain)
  - Pickling/Unpickling of matrix groups (only generators and Size)
  - Pickling/Unpickling of finite fields
  - Set Host component of HTTP request header by default of the name
    of the server argument in SingleHTTPRequest.
  - Alexander Konovalov's CheckForUpdates function.
  - Released revision 289 as 2.1


==========================
 Changes from 1.6 -> 2.0:
==========================

  - See to SIGCHLD signal handler in Popen, Popen2, and Popen3